# AgriSaarthi

./: .dockerignore  .gitignore  AGENT_SYSTEM_README.md  DOCKER_README.md  Dockerfile  Dockerfile.dev  MIGRATION_TO_QDRANT.md  README.md  TAVILY_SETUP.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  env.example  main.py  pyproject.toml  run_tests.py  test_agents.py  test_all_agents.py  test_chat_endpoints.py  test_tavily.py
app/agents/: agent.py  agent_factory.py  base_agent.py  tools.py
app/agents/crop_science_agent/: __init__.py  agent.py  prompt.py
app/agents/fertilizer_agent/: __init__.py  agent.py  prompt.py
app/agents/finance_agent/: agent.py  prompt.py
app/agents/gov_schemes_agent/: __init__.py  agent.py  prompt.py
app/agents/market_agent/: agent.py  prompt.py
app/agents/other_agent/: __init__.py  agent.py  prompt.py
app/agents/soil_health_agent/: __init__.py  agent.py  prompt.py
app/agents/weather_agent/: agent.py  prompt.py
app/api/routers/: chat.py  ingest.py
app/core/: config.py  llm.py  milvus_client.py  qdrant_client.py  vector_store.py
app/mcp/: mcp.py
app/utils/: chunking.py  parsing.py
scripts/: create_milvus_collection.py  create_qdrant_collection.py
tests/: __init__.py  test_agents.py  test_all_agents.py  test_markdown.py
volumes/milvus/rdb_data/: IDENTITY  LOG
volumes/milvus/rdb_data_meta_kv/: IDENTITY  LOG
web/: README.md  package-lock.json  package.json  tailwind.config.ts
web/.next/: app-build-manifest.json  prerender-manifest.json  trace
web/app/: globals.css  layout.tsx  page.tsx
(+71 files in other folders)
