[project]
name = "server"
version = "0.1.0"
description = "RAG FastAPI service using LlamaIndex, Gemini (LLM+embeddings), Milvus/Zilliz, and Chonkie chunking"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
  "python-multipart>=0.0.10",
  "sse-starlette>=2.1.0",
  "llama-index>=0.12.0",
  "llama-index-llms-google-genai>=0.1.10",
  "llama-index-embeddings-google-genai>=0.1.2",
  "google-genai>=0.4.0",
  "pymilvus>=2.6.0",
  "chonkie>=1.0.6a0",
  "pypdf>=5.0.0",
  "python-dotenv>=1.0.1",
  "fastmcp>=2.11.2",
]

[tool.uv]
# Optional dev dependencies
dev-dependencies = [
  "ruff>=0.6.0",
]

